Add scriptable world generators and clean up agent code
Introduce a safe DSL and world generation runtime for vibed plugins, including compiled column generators, JS column/function callbacks, declarative structures, and Bukkit generator export support. Wire generator exports through plugin loading, server world creation, API docs, and STARTUP plugin loading so custom worlds can resolve vibed generator IDs.

Improve worldgen reliability and diagnostics: validate DSL function arity, report failing column/span expressions with variables, fix comma tokenization in numeric expressions, skip surface structures on empty chunks, reject unsupported generator types, and synchronize direct JS function callbacks to avoid GraalJS multi-threaded chunk generation failures.

Compress and clarify the agent system prompt with stronger guidance for plugin exports, world generation generator selection, direct function callbacks, sky islands, ribbons, and performance tradeoffs.

Refactor for maintainability by simplifying OpenAIAgent, AgentHandler, Conversation, and plugin file tools; centralize manifest reload handling; remove debug prints, unused LangChain dependencies, and dead Items/VibedCode/VibeContext classes.